Fix: Dark mode logic, when click in MainItem

--- a/src/assets/scss/components/common/MainItem.scss
+++ b/src/assets/scss/components/common/MainItem.scss
@@ -19,6 +19,9 @@ body.dark{
                             a{
                                 color: #e0e0e0;
                             }
+                            button{
+                                color: #e0e0e0;
+                            }
                         }
                     }
                 }
